# fido-device-onboard-rs

./: .gitignore  .gitleaks.toml  .mergify.yml  .packit.yaml  0001-Revert-chore-use-git-fork-for-aws-nitro-enclaves-cos.patch  CONTRIBUTING.md  Cargo.toml  HOWTO.md  LICENSE  Makefile  README.md  RELEASING.md  TESTING.md  fido-device-onboard.spec  make-vendored-tarfile.sh  spec-incomformaties  test.cbor  update-vendor.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: commitlint.config.js  commitlint.config.mjs  dependabot.yml  labeler.yml  spellcheck-ignore
.github/workflows/: analysis.yml  cd.yml  ci.yml  image-mode-ci.yaml  integration.yaml  labeler.yml
admin-tool/: Cargo.toml
admin-tool/src/: main.rs
admin-tool/src/aio/: configure.rs  device.rs  execute.rs  mod.rs
client-linuxapp/: Cargo.toml
client-linuxapp/src/: device_credential_locations.rs  main.rs  serviceinfo.rs
client-linuxapp/src/reencrypt/: mod.rs  rebind.rs
client_linuxapp/: Cargo.toml
client_linuxapp/src/: main.rs  serviceinfo.rs
contrib/containers/: README.md  admin-cli  aio  build  client-linuxapp  manufacturing-server  owner-onboarding-server  rendezvous-server  serviceinfo-api-server
data-formats/: Cargo.toml  build.rs
data-formats/src/: cborparser.rs  constants.rs  enhanced_types.rs  errors.rs  lib.rs  ownershipvoucher.rs  publickey.rs  serializable.rs  types.rs
data-formats/src/constants/: mod.rs  serviceinfo_names.rs
data-formats/src/devicecredential/: file.rs  mod.rs
data-formats/src/messages/: di.rs  diun.rs  error.rs  mod.rs  to0.rs  to1.rs  to2.rs
data-formats/src/messages/v10/: di.rs  diun.rs  error.rs  to0.rs  to1.rs  to2.rs
data-formats/src/messages/v11/: di.rs  diun.rs  error.rs  mod.rs  to0.rs  to1.rs  to2.rs
db/: Cargo.toml
db/src/: lib.rs  models.rs  postgres.rs  schema.rs  sqlite.rs
docs/: Gemfile  _config.yml  index.md
docs-rpms/: fdo-admin-cli.rst  fdo-client.rst  fdo-init.rst  fdo-manufacturing-server.rst  fdo-owner-cli.rst  fdo-owner-onboarding-server.rst  fdo-rendezvous-server.rst
docs/sims/: encryption.md  index.md
docs/specs/: diun.md  index.md  ov_management_api.md  serviceinfo_api.md
dracut/52fdo/: manufacturing-client-generator  manufacturing-client-service  manufacturing-client.service  module-setup.sh
dracut/52fido/: manufacturing-client-generator  manufacturing-client-service  manufacturing-client.service  module-setup.sh
examples/config/: create-keys.sh  device_specific_serviceinfo.yml  manufacturing-server.yml  owner-addresses.yml  (+4 more)
fido-iot-data-formats/: Cargo.toml
fido-iot-data-formats/src/: constants.rs  errors.rs  lib.rs  ownershipvoucher.rs  publickey.rs  types.rs
http-wrapper/: Cargo.toml
http-wrapper/src/: client.rs  lib.rs  server.rs
integration/: prepare.sh  test.sh
integration-tests/: Cargo.toml
integration-tests/templates/: manufacturing-server.yml.j2  manufacturing-service.yml.j2  owner-addresses.yml.j2  owner-onboarding-server.yml.j2  owner-onboarding-service.yml.j2  rendezvous-info.yml.j2  rendezvous-server.yml.j2  rendezvous-service.yml.j2  serviceinfo-api-dev-server.yml.j2  serviceinfo-api-server.yml.j2
integration-tests/tests/: di_diun.rs  di_diun_https.rs  e2e.rs  ov_management.rs  serial_number_test.rs  service_info.rs  store.rs  to.rs  voucher_tests.rs
integration-tests/tests/common/: mod.rs
integration-tests/tests/test-data/https-test/: manufacturing_server_https_cert.crt  manufacturing_server_https_key.key
integration-tests/vouchers/: voucher1  voucher2  voucher3
integration-tests/vouchers/v100/: voucher1  voucher2
integration-tests/vouchers/v101/: voucher1  voucher2  voucher3
konflux/: README.md  fdo-container-test.yaml  fdo-manufacturing-server-integration-tests.yaml  fdo-owner-onboarding-server-integration-tests.yaml  fdo-rendezvous-server-integration-tests.yaml  fdo-serviceinfo-api-server-integration-tests.yaml
libfdo-data/: Cargo.toml  README.md  build.rs  cbindgen.toml  fdo_data.h  libfdo-data-go.doc
libfdo-data-go/: cimport.go  errors.go  go.mod  local.go  ownershipvoucher.go  strings.go
libfdo-data/src/: lib.rs  ownershipvoucher.rs  test_common.rs
libfdo-data/test_assets/: testdevice1.ov
libfdo-data/test_scripts/: go.mod  ownershipvoucher.go  ownershipvoucher_many.go
manufacturing-client/: Cargo.toml
manufacturing-client/src/: main.rs
manufacturing-server/: Cargo.toml
manufacturing-server/src/: main.rs
manufacturing-server/src/handlers/: di.rs  diun.rs  mgmt.rs  mod.rs
manufacturing-server/src/tls_config/: mod.rs
mfg_station/: Cargo.toml
mfg_station/src/: main.rs
owner-onboarding-server/: Cargo.toml
owner-onboarding-server/src/: handlers.rs  main.rs
owner-onboarding-server/src/ov_management/: mod.rs
owner-onboarding-server/src/serviceinfo/: mod.rs
owner-onboarding-server/src/tls_config/: mod.rs
owner-onboarding-service/: Cargo.toml
owner-tool/: Cargo.toml
owner-tool/src/: main.rs
owner_onboarding_service/: Cargo.toml
owner_tool/: Cargo.toml
owner_tool/src/: main.rs
patches/: 0001-Revert-chore-use-git-fork-for-aws-nitro-enclaves-cos.patch  0001-fix-aws-nitro-enclaves-cose.patch
rendezvous-server/: Cargo.toml
rendezvous-server/src/: handlers_to0.rs  handlers_to1.rs  main.rs
rendezvous_server/: Cargo.toml
rendezvous_server/src/: handlers_to0.rs  handlers_to1.rs  main.rs
serviceinfo-api-dev-server/: Cargo.toml
serviceinfo-api-dev-server/src/: main.rs
serviceinfo-api-server/: Cargo.toml
serviceinfo-api-server/src/: main.rs
specs/: diun.md  ov_management_api.md  serviceinfo_api.md
store/: Cargo.toml
store/src/: db.rs  directory.rs  in_memory.rs  lib.rs  pg.rs  sqlite.rs
test/: check-ostree.yaml  fdo-container.sh  fdo-postgres.sh  setup.sh
testing/: Cargo.toml
testing/src/: main.rs
util/: Cargo.toml
util/src/: device_credential_locations.rs  device_identification.rs  lib.rs  passwd_shadow.rs  servers.rs  system_info.rs
util/src/servers/: mod.rs
util/src/servers/configuration/: manufacturing_server.rs  mod.rs  owner_onboarding_server.rs  rendezvous_server.rs  serviceinfo_api_server.rs
(+51 files in other folders)
