[workspace]
members = [
    "libfdo-data",
    "data-formats",
    "http-wrapper",
    "store",
    "util",

    "client-linuxapp",
    "owner-onboarding-server",
    "owner-tool",
    "rendezvous-server",
    "manufacturing-server",
    "manufacturing-client",
    "admin-tool",

    "serviceinfo-api-dev-server",
    "integration-tests",
]
