[workspace]
members = [
    "libfdo-data",
    "data-formats",
    "http-wrapper",
    "store",
    "util",
    "db",

    "client-linuxapp",
    "owner-onboarding-server",
    "owner-tool",
    "rendezvous-server",
    "manufacturing-server",
    "manufacturing-client",
    "serviceinfo-api-server",
    "admin-tool",

    "integration-tests",
]

default-members = [
    "libfdo-data",
    "data-formats",
    "http-wrapper",
    "store",
    "util",
    "db",

    "client-linuxapp",
    "owner-onboarding-server",
    "owner-tool",
    "rendezvous-server",
    "manufacturing-server",
    "manufacturing-client",
    "serviceinfo-api-server",
    "admin-tool",
]

resolver = "2"

[patch.crates-io]
aws-nitro-enclaves-cose = { git = "https://github.com/awslabs/aws-nitro-enclaves-cose/", rev = "6064f826d551a9db0bd42e9cf928feaf272e8d17" }
