[package]
name = "fdo-admin-tool"
version = "0.4.11"
authors = ["Antonio Murdaca <runcom@linux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13.3"
openssl = "0.10.55"
log = "0.4"
time = "0.3"
clap = { version = "4.2", features = ["derive"] }
futures = "0.3"
reqwest = "0.11"
serde = "1"
serde_yaml = "0.9"
pretty_env_logger = "0.4"
nix = "0.26"
tokio = { version = "1", features = ["full"] }

fdo-data-formats = { path = "../data-formats", version = "0.4.11" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.11", features = ["server", "client"] }
fdo-store = { path = "../store", version = "0.4.11", features = ["directory"] }
fdo-util = { path = "../util", version = "0.4.11" }

[dev-dependencies]
rand = "0.8"