[package]
name = "fdo-client-linuxapp"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
sys-info = "0.9"
passwd = "0.0.1"
rand = "0.8.4"

fdo-data-formats = { path = "../data-formats", version = "0.1.0" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.1.0", features = ["client"] }
fdo-util = { path = "../util", version = "0.1.0" }