[package]
name = "client_linuxapp"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

fdo-data-formats = { path = "../data-formats" }
fdo_http_wrapper = { path = "../http-wrapper", features = ["client"] }
