[package]
name = "client_linuxapp"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
openssl = "0.10"
reqwest = "0.11"
serde_cbor = "0.11"
tokio = { version = "1", features = ["full"] }
sys-info = "0.8"

fdo-data-formats = { path = "../data-formats" }
fdo_http_wrapper = { path = "../http-wrapper", features = ["client"] }
