[package]
name = "fdo-data-formats"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
openssl = "0.10.34"
openssl-kdf = "0.1"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_repr = "0.1.6"
serde_tuple = "0.5"
thiserror = "1"
aws-nitro-enclaves-cose = "0.4.0"
uuid = "0.8"
num-traits = "0.2"
num-derive = "0.3"
paste = "1.0"
pem = "1.0"

http = "0.2"
hyper = "0.14"

[dev-dependencies]
maplit = "1.0"
