[package]
name = "fdo-data-formats"
version = "0.4.6"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
hex = "0.4"
openssl = "0.10.35"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_repr = "0.1.6"
serde_tuple = "0.5"
thiserror = "1"
aws-nitro-enclaves-cose = "0.4.0"
uuid = "1.0"
num-traits = "0.2"
num-derive = "0.3"
paste = "1.0"
pem = "1.0"
tss-esapi = "7.0"

http = "0.2"
hyper = "0.14"

openssl-kdf = { version = "0.4.1", features = ["allow_custom"] }

[features]
# Whether to use a non-interoperable KDF.
use_noninteroperable_kdf = []

[build-dependencies]
openssl-kdf = { version = "0.4.1", features = ["allow_custom"] }

[dev-dependencies]
maplit = "1.0"
