[package]
name = "fdo-db"
version = "0.5.2"
edition = "2021"


[dependencies]
anyhow = "1.0"
diesel = { version = "2.2.6", features = ["sqlite", "postgres", "r2d2"] }

fdo-data-formats = { path = "../data-formats", version = "0.5.2" }

[dev-dependencies]
fdo-http-wrapper = { path = "../http-wrapper", version = "0.5.2", features = ["server"] }
openssl = "0.10.66"

[features]
postgres = []
sqlite = []

default = ["postgres", "sqlite"]
