[package]
name = "fido-iot-data-formats"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
openssl = "0.10"
log = "0.4"
serde = "1.0"
serde_cbor = "0.11"
serde_int_map = "0.1.2"
serde_int_map_derive = "0.1.2"
serde_repr = "0.1.6"
aws-nitro-enclaves-cose = { git = "https://github.com/puiterwijk/aws-nitro-enclaves-cose.git", branch = "puiterwijk_main" }
