[package]
name = "fdo_http_wrapper"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"

fdo-data-formats = { path = "../data-formats" }

# Server-side
uuid = { version = "0.8", features = ["v4"], optional = true }
warp = { version = "0.3", optional = true }

# Client-side
reqwest = { version = "0.11", optional = true }

[features]
server = ["warp", "uuid"]
client = ["reqwest"]
