[package]
name = "fdo_http_wrapper"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9"
futures = "0.3"
thiserror = "1"
async-trait = "0.1"
serde_cbor = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }

openssl = "0.10"

fdo-data-formats = { path = "../data-formats" }
fdo-store = { path = "../store" }

# Server-side
uuid = { version = "0.8", features = ["v4"], optional = true }
warp = { version = "0.3", optional = true }
warp-sessions = { version = "1.0", optional = true }

# Client-side
reqwest = { version = "0.11", optional = true }

[features]
server = ["warp", "warp-sessions", "uuid"]
client = ["reqwest"]
