[package]
name = "fdo-http-wrapper"
version = "0.4.6"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.4"

hex = "0.4"

openssl = "0.10.35"

fdo-data-formats = { path = "../data-formats", version = "0.4.6" }
fdo-store = { path = "../store", version = "0.4.6" }
aws-nitro-enclaves-cose = "0.4.0"

# Server-side
uuid = { version = "1.0", features = ["v4"], optional = true }
warp = { version = "0.3", optional = true }
warp-sessions = { version = "1.0", optional = true }
time = "0.3"

# Client-side
reqwest = { version = "0.11.9", optional = true, features = ["native-tls", "json"] }
url = { version = "2", optional = true }

[features]
server = ["warp", "warp-sessions", "uuid"]
client = ["reqwest", "url"]
