[package]
name = "integration-tests"
version = "0.4.6"
edition = "2018"
publish = false

[[bin]]
name = "test-locator"
path = "locator.rs"

[[test]]
name = "di_diun-tests"
path = "tests/di_diun.rs"

[[test]]
name = "to-tests"
path = "tests/to.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
tempfile = "3"
tera = "1"
lazy_static = "1.4.0"
openssl = "0.10.35"
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.12.0"
serde = "1"
serde_cbor = "0.11"
serde_json = "1.0"
pretty_assertions = "1.0.0"
paste = "1.0"
passwd = "0.0.1"
pem = "1.0"
users = "0.11.0"

fdo-data-formats = { path = "../data-formats" }
fdo-util = { path = "../util" }
