[package]
name = "fdo-data"
version = "0.4.10"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fdo-data-formats = { path = "../data-formats", version = "0.4.10" }
libc = "0.2"

[build-dependencies]
cbindgen = "0.24.6"

[dev-dependencies]
tempfile = "3.5.0"
assert-str = "0.1"
serial_test = "2.0.0"
