[package]
name = "fdo-manufacturing-client"
version = "0.5.4"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
log = "0.4"
openssl = "0.10.72"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
tss-esapi = { version = "7.4", features = ["generate-bindings"] }
regex = "1.11.1"

fdo-data-formats = { path = "../data-formats", version = "0.5.4" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.5.4", features = ["client"] }
fdo-util = { path = "../util", version = "0.5.4" }
clap_builder = "4.4"
