[package]
name = "fdo-manufacturing-server"
version = "0.4.13"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13.4"
tokio = { version = "1", features = ["full"] }
thiserror= "1"
serde = "1"
openssl = "0.10.60"
warp = "0.3.6"
log = "0.4"
hex = "0.4"
serde_yaml = "0.9"

fdo-data-formats = { path = "../data-formats", version = "0.4.13" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.13", features = ["server"] }
fdo-store = { path = "../store", version = "0.4.13", features = ["directory"] }
fdo-util = { path = "../util", version = "0.4.13" }

hyper = { version = "0.14", features = ["tcp"] }
tls-listener = { version = "0.7.0", features = ["openssl", "hyper-h1"]}