[package]
name = "mfg_station"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

fdo-data-formats = { path = "../data-formats" }
fdo_http_wrapper = { path = "../http-wrapper", features = ["server"] }
