[package]
name = "fdo-owner-onboarding-server"
version = "0.4.6"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.11"
tokio = { version = "1", features = ["full"] }
thiserror= "1"
serde = "1"
openssl = "0.10.35"
warp = "0.3"
serde_bytes = "0.11"
serde_cbor = "0.11"
log = "0.4"
serde_yaml = "0.8"
time = "0.3"
hex = "0.4"

fdo-data-formats = { path = "../data-formats", version = "0.4.6" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.6", features = ["server", "client"] }
fdo-store = { path = "../store", version = "0.4.6", features = ["directory"] }
fdo-util = { path = "../util", version = "0.4.6" }
