[package]
name = "fdo-owner-onboarding-server"
version = "0.4.12"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13.3"
tokio = { version = "1", features = ["full"] }
thiserror= "1"
serde = "1"
openssl = "0.10.55"
warp = { version = "0.3", default-features = false, features = ["tls"]}
hyper = { version = "0.14", features = ["tcp"] }
tls-listener = { version = "0.7.0", features =  ["openssl", "hyper-h1"]}
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0.79"
log = "0.4"
serde_yaml = "0.9"
time = "0.3"
hex = "0.4"

fdo-data-formats = { path = "../data-formats", version = "0.4.12" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.12", features = ["server", "client"] }
fdo-store = { path = "../store", version = "0.4.12", features = ["directory"] }
fdo-util = { path = "../util", version = "0.4.12" }
