[package]
name = "fdo-owner-tool"
version = "0.4.12"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
openssl = "0.10.60"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tss-esapi = { version = "7.4", features = ["generate-bindings"] }

fdo-util = { path = "../util", version = "0.4.12" }
fdo-data-formats = { path = "../data-formats", version = "0.4.12" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.12", features = ["client"] }


hex = "0.4"
