[package]
name = "fdo-owner-tool"
version = "0.5.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
openssl = "0.10.60"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tss-esapi = { version = "7.4", features = ["generate-bindings"] }

fdo-util = { path = "../util", version = "0.5.0" }
fdo-data-formats = { path = "../data-formats", version = "0.5.0" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.5.0", features = ["client"] }
fdo-db = { path = "../db", version = "0.5.0"}

hex = "0.4"
