[package]
name = "owner_tool"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
aws-nitro-enclaves-cose = { git = "https://github.com/puiterwijk/aws-nitro-enclaves-cose.git", branch = "unprotected" }

fdo-data-formats = { path = "../data-formats" }
fdo_http_wrapper = { path = "../http-wrapper", features = ["client"] }
