[package]
name = "fdo-rendezvous-server"
version = "0.5.5"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.15.12"
tokio = { version = "1", features = ["full"] }
thiserror= "1"
serde = "1"
openssl = "0.10.72"
warp = "0.3.6"
log = "0.4"
time = "0.3"

fdo-data-formats = { path = "../data-formats", version = "0.5.5" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.5.5", features = ["server"] }
fdo-store = { path = "../store", version = "0.5.5" }
fdo-util = { path = "../util", version = "0.5.5" }
