[package]
name = "rendezvous_server"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.11"
tokio = { version = "1", features = ["full"] }
thiserror= "1"
serde = "1"
openssl = "0.10"
warp = "0.3"
pretty_env_logger = "0.4"
serde_cbor = "0.11"
log = "0.4"

fdo-data-formats = { path = "../data-formats" }
fdo_http_wrapper = { path = "../http-wrapper", features = ["server"] }
fdo-store = { path = "../store" }


[features]
default = ["storage_driver_in_memory"]
storage_driver_in_memory = []
