[package]
name = "fdo-serviceinfo-api-server"
version = "0.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"

fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.6", features = ["server"] }
fdo-data-formats = { path = "../data-formats", version = "0.4.6" }
fdo-store = { path = "../store", version = "0.4.6", features = ["directory"] }
fdo-util = { path = "../util", version = "0.4.6" }
