[package]
name = "fdo-serviceinfo-api-server"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13.4"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"

fdo-http-wrapper = { path = "../http-wrapper", version = "0.5.4", features = ["server"] }
fdo-data-formats = { path = "../data-formats", version = "0.5.4" }
fdo-store = { path = "../store", version = "0.5.4", features = ["directory"] }
fdo-util = { path = "../util", version = "0.5.4" }
