[package]
name = "fdo-util"
version = "0.4.7"
authors = ["Antonio Murdaca <runcom@linux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.13.2"
glob = "0.3.0"
log = "0.4"
serde = "1"

fdo-data-formats = { path = "../data-formats", version = "0.4.7" }
fdo-store = { path = "../store", version = "0.4.7" }
fdo-http-wrapper = { path = "../http-wrapper", version = "0.4.7", features = ["server", "client"] }
serde_yaml = "0.9"
serde_cbor = "0.11"
serde_json = "1"
